--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "eventsource": "^2.0.2",
     "node-fetch": "^2.6.9",
     "openai": "^3.2.1"
   }
